# RustBB

./: .gitignore  README.md  schema.dbm
backend/: .dockerignore  .env  AVATAR_UPLOAD.md  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  docker-compose.yml  schema.sql  test-docker.sh  tests.sh
backend/src/: config.rs  error.rs  main.rs  middleware.rs  models.rs  oauth.rs
backend/src/db/: forum.rs  mod.rs  user.rs
backend/src/dto/: forum.rs  user.rs
backend/src/handler/: auth.rs  forum.rs  mod.rs  oauth.rs  user.rs
backend/src/mail/: mails.rs  sendmail.rs
backend/src/utils/: file_upload.rs  mod.rs  password.rs  token.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  \  index.html
frontend/src/: bind.rs  dto.rs  forum.rs  main.rs  storage.rs  tailwind.css  user.rs
frontend/src/app/: editor.rs  header.rs  home.rs  inbox.rs  login.rs  mod.rs  oauth_callback.rs  register.rs  section.rs  section_list.rs  topic.rs  user.rs  user_list.rs  user_page.rs
frontend/src/text/: mod.rs  span.rs  style.rs
