[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.87"
axum = { version = "0.8.8", features = ["macros", "multipart", "http2"] }
axum-extra = { version = "0.12.3", features = ["cookie", "cookie-private", "typed-header"]  }
axum-server = { version = "0.8.*", features = ["tls-rustls"] }
chrono = { version = "0.4.40", features = ["serde"] }
http = "1.3.1"
jsonwebtoken = { version = "10.2.0", features = ["rsa", "ed25519-dalek", "rust_crypto"] }
password-hash = "0.5.0"
rand_core = { version = "0.9.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.*", features = ["postgres","runtime-tokio","uuid","chrono"] }
tokio = { version = "1.44.8", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.*", features = ["chrono", "env-filter", "serde"] }
dotenv = "0.15.0"
lettre = "0.11.15"
time = "0.3.20"
pulldown-cmark = { version = "0.13.0", features = ["serde", "simd"] }
reqwest = { version = "0.12.26", features = ["json"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
thiserror = "2.0.17"
dashmap = { version = "6.1.0", features = ["serde"] }
infer = "0.19.0"
tower_governor = { version = "0.8.0", features = ["tracing"] }
